@@ -1,15 +1,14 @@
 ---
 abstract: 'Math::BigInt::Calc with some XS for more speed'
 author:
-  - 'Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>'
-  - 'Tels <nospam-abuse@bloodgate.com>'
+  - 'Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Tels <nospam-abuse@bloodgate.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0.62
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.01'
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,13 +16,11 @@ meta-spec:
 name: Math-BigInt-FastCalc
 no_index:
   directory:
-    - inc
     - t
+    - inc
 requires:
-  Math::BigInt: 1.993
-  Math::BigInt::Calc: 1.993
+  Math::BigInt: 1.997
+  Math::BigInt::Calc: 1.997
   XSLoader: 0
   perl: 5.006
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.29
+version: 0.30
